--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>com.atguigu</groupId>
+            <artifactId>common_util</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atguigu</groupId>
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
