--- a/service_client/pom.xml
+++ b/service_client/pom.xml
@@ -21,7 +21,11 @@
     </properties>
 
     <dependencies>
-        4.0.0
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>common_util</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.atguigu</groupId>
