--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service_client</module>
         <module>service-cmn-client</module>
         <module>service_gateway</module>
+        <module>service_msm</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
